Adding late music post

--- a/music/_posts/2022-04-02-post-2.md
+++ b/music/_posts/2022-04-02-post-2.md
@@ -19,12 +19,12 @@ The first playlist is a tribute to my internal geeker and the Ruler. GIP. You kn
 {% include spotify_playlist.html id='1fhmZexGqk4r1e8BEHgmX5' %}
 
 ## Der Teufel ist der Gangsta
-The twist here is a different language. Feel free to listen to it even if you can't understand the lyrics the vibe will still be understood. Plus shit maybe the got a lyric translator for the hella curious.
+The twist here is a different language. Feel free to listen to it even if you can't understand the lyrics the vibe will still be understood. Plus shit maybe they (whoever) got a lyric translator for the hella curious.
 
 ![The Immortal Tatsu](../../assets/images/gokushufudou-1-tatsu.png)
 
 {% include spotify_playlist.html id='6vnhduP0nW9pcFdaYPk3mC' %}
 
-With this post I had the honor of learning how to adjust the sizes of the embedded playlists
+With this post I had the honor of learning how to adjust the sizes of the embedded playlists which should now have a full width and match the windows height in pixels.
 
 :zap::whale:
